refactor src layout and gulp script.

--- a/src/www/component/example-component.html
+++ b/src/www/component/example-component.html
@@ -1,4 +1,4 @@
-<link rel="import" href="./required-component/required-component.html">
+<link rel="import" href="required-component/required-component.html">
 <template id="example-component">
     <style>
         div {
@@ -9,4 +9,4 @@
     <div>example component</div>
     <required-component></required-component>
 </template>
-<script src="./example-component.js"></script>
+<script src="example-component.js"></script>
