--- a/src/www/component/required-component/required-component.html
+++ b/src/www/component/required-component/required-component.html
@@ -7,4 +7,4 @@
     </style>
     <div>required component</div>
 </template>
-<script src="./required-component.js"></script>
+<script src="required-component.js"></script>
