--- a/src/component/example-component.html
+++ b/src/component/example-component.html
@@ -2,8 +2,8 @@
 <template id="example-component">
     <style>
         div {
-            background-color: #f5f5f5;
-            color: #000080;
+            background-color: #f56065;
+            color: #000010;
         }
     </style>
     <div>example component</div>
